<resources>
    <string name="app_name">Barrio App</string>
    <string name="title_activity_puntos">Punto de Venta</string>
    <string name="title_activity_precios">Ventas</string>
    <string name="title_activity_promo">Promoción</string>
    <string name="title_activity_gps">Registro</string>
    <string name="title_activity_exhi">Exhibición</string>
    <string name="title_activity_flooring">Stock</string>
    <string name="title_activity_pr">Precios</string>
    <string name="title_activity_implementacion">Implementacion</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_agotados">Agotados</string>
    <string name="fechafin">Fecha Fin</string>
    <string name="title_activity_exh">Exhibición</string>
    <string name="title_activity_exh_cp_adicionales">Herramientas</string>
    <string name="title_activity_nueva">Nueva Herramienta</string>
    <string name="menu_herramientas_exh">Herramientas Exhibiciones</string>
    <string name="mng_salirherramientas">¿Desea regresar al Menú Principal?</string>
    <string name="title_activity_geosupervision">Geosupervisión</string>
    <string name="title_activity_prom">Promoción</string>
    <string name="title_activity_visibilidad">Visibilidad IT</string>
    <string name="title_activity_tracking">Tracking</string>
    <string name="title_activity_materialpop">Material POP</string>
    <string name="title_activity_herramientas">Herramientas Exhibiciones</string>
    <string name="tipo_exh">Tipo de Exhibición</string>
    <string name="reporte">Reporte</string>
    <string name="herramienta">Herramienta</string>
    <string name="title_activity_exh_cp">Exhibicion BS</string>
    <string name="tipo_cab">Tipo de Herramienta</string>
    <string name="cat">Categoría</string>
    <string name="tipo_novedad">Tipo Novedades</string>
    <string name="zonaexh">(*) Zona Exhibición</string>
    <string name="personalizacion">Personalización BS</string>
    <string name="estrella">Estrella de Precio</string>
    <string name="subprim">Carga Primaria</string>
    <string name="num_exh">Número Exhibición</string>
    <string name="foto">foto</string>
    <string name="obser">Observación \n (Opcional)</string>
    <string name="galeria">Abrir Galería</string>
    <string name="correccion">Es una corrección</string>
    <string name="campana">Campana</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Siguiente</string>
    <string name="title_activity_result">Results!!!</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAd4j6z6jx8T3rhpdWJT3XZdtg1xJ_GGrw</string>
    <string name="settings_menu_item">Settings</string>
    <string name="name">com.tesis.michelle.pin.name</string>
    <string name="cluf">com.tesis.michelle.pin.cluf</string>
     <string name="timeout">Tiempo de espera agotado</string>
     <string name="no_connection">Sin conexión a Internet</string>
     <string name="server_error">Error del servidor</string>
     <string name="network_error">Error de red</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="city">Ciudad</string>
    <string name="prom">Promotor</string>
    <string name="retail">Retail</string>
    <string name="sucursal">Sucursal</string>
    <string name="status">Marca</string>
    <string name="tipofact">Fabricante</string>
    <string name="numfact">Numero de factura</string>
    <string name="numsku">Cantidad</string>
    <string name="precioP">Precio Bassa</string>
    <string name="codificados">Codificados</string>
    <string name="fabricante">Fabricante</string>
    <string name="precio_descuento">Precio Descuento</string>
    <string name="codigo">Codigo</string>
    <string name="usuario">Usuario</string>
    <string name="categoria">Barrio</string>
    <string name="tareass">Tareas</string>
    <string name="ejecutada">Ejecutada</string>
    <string name="subcat">Subcategoría</string>
    <string name="presentacion">Presentacion</string>
    <string name="otros">Otros</string>
    <string name="carasyganchos">Caras/Ganchos</string>
    <string name="filtro">Filtro</string>
    <string name="search">Buscar</string>
    <string name="tipo">Tipo de usuario</string>
    <string name="tipo_logro">Tipo Logro</string>
    <string name="local">Local</string>
    <string name="codigo_fabril">Código Fabril</string>
    <string name="vendedor_fabril">Vendedor Fabril</string>
    <string name="tipoim">Implementación</string>
    <string name="modo">Modo Foto</string>
    <string name="promo">Promoción</string>
    <string name="productos">Tipo de Denuncia</string>
    <string name="tipof">Foto Exhibición</string>
    <string name="njefe">Nombre Jefe Almacen</string>
    <string name="obsv">Comentario:</string>
    <string name="tipoexh">Tipo Exhibición</string>
    <string name="numexh">Numero de Exhibidores</string>
    <string name="comentario">Comentario</string>
    <string name="caracter">200</string>
    <string name="registro">Registro</string>
    <string name="lat">Latitud</string>
    <string name="total">Total</string>
    <string name="novedades">Novedades</string>
    <string name="longi">Longitud</string>
    <string name="inventario">Inventario</string>
    <string name="pdv_name">Punto de venta</string>
    <string name="tipopromo"></string>
    <string name="model">Modelo</string>
    <string name="fecha">Fecha</string>
    <string name="fechaVenta">Fecha Venta</string>
    <string name="hora">Hora</string>
    <string name="cantidad">Cantidad</string>
    <string name="comentario_1">Comentario 1</string>
    <string name="comentario_2">Comentario 2</string>
    <string name="comentario_3">Comentario 3</string>
    <string name="ventas">Ventas</string>
    <string name="pvp">Pvp ($)</string>
    <string name="mecanica">Mecanica</string>
    <string name="periodo">Periodo</string>
    <string name="porta_productos">Productos</string>
    <string name="pcont">Precio Contado</string>
    <string name="inv_inicial">Inventario Inicial</string>
    <string name="fecharto">Fecha Rotacion</string>
    <string name="pcuotas">Precio Cuotas</string>
    <string name="cuota">Cuotas</string>
    <string name="vcuota">Valor Cuota</string>
    <string name="cuota2">Cuotas 2</string>
    <string name="vcuota2">""</string>
    <string name="quiebre">Quibre</string>
    <string name="Udisponible">Unidad Disponible</string>
    <string name="Csugerido">Sugerido</string>
    <string name="Ccantidad">Cantidad</string>
    <string name="Sobservaciones">Observaciones</string>
    <string name="spiso">Piso</string>
    <string name="ventrada">Valor de Entrada</string>
    <string name="fpago">Forma de Pago</string>
    <string name="stienda">Stock Tienda</string>
    <string name="sgeneral">Stock General</string>
    <string name="num">Número Factura</string>
    <string name="modulo">Modulo</string>
    <string name="pos_id">Codigo</string>
    <string name="dealer">Dealer</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="correo">Correo</string>
    <string name="estado">Estado</string>
    <string name="reg">Registro</string>
    <string name="coord">Coordenadas</string>
    <string name="causal">Causal</string>
    <string name="sync_agotados">Agotados</string>
    <string name="establecimiento">Establecimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="material">Material POP</string>
    <string name="numero">Numero</string>
    <string name="producto">Producto</string>
    <string name="sku">Sku</string>
    <string name="lote"></string>
    <string name="cantidadNovedades">Cantidad de veces  observada en el mes</string>
    <string name="LoteProbadores">Lote</string>
    <string name="numeroFactura">#  de Factura</string>
    <string name="numeroMecanica">Mecánica</string>
    <string name="precioAnterior">Precio Anterior</string>
    <string name="precioPromocion">Precio Promocion</string>
    <string name="fecha_vencimiento">Fecha vencimiento</string>
    <string name="fecha_inicio">Fecha de registro</string>
    <string name="preciocredito">Precio Crédito</string>
    <string name="estadovisita">Estado de Visita</string>
    <string name="notificacion">Notificacion</string>
    <string name="action_info">Info</string>
    <string name="action_hist">Vaciar Historial</string>
    <string name="empty_list">No hay registros para mostrar...</string>
    <string name="marcas">CodigoMarca</string>
    <string name="tareas">Tareas Asignadas</string>
    <string name="quiebres">Quiebre/Posible Quiebre</string>
    <string name="otrosshare">Otros</string>
    <string name="sugerido">Sugerido</string>
    <string name="observaciones">Observaciones</string>
    <string name="entrega">Tiempo de Entrega</string>
    <string name="disponible">Und. Disponible</string>
    <string name="target">Inventario</string>
    <string name="cant">Cantidad</string>
    <string name="cantt">CANT</string>
    <string name="souv">Souvenirs</string>
    <string name="display">Display</string>
    <string name="motivo_sugerido">Motivo Sugerido</string>
    <string name="fechainicio">Fecha Inicio</string>
    <string name="unidades">Unidades</string>
    <string name="promotor">Promotor</string>
    <string name="login">Ingresar</string>
    <string name="send">Enviar</string>
    <string name="next">Continuar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="salir">Salir</string>
    <string name="es_audio">Necesita permiso para grabar audio. Por favor habilitar desde el administrador de aplicaciones.</string>
    <string name="action_sync">Cargar información retenida</string>
    <string name="action_log">Revisar envío de información</string>
    <string name="action_version">Version App</string>
    <string name="test">Test</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="actualizar_pdvs_productos">Actualizar Información</string>
    <string name="subir_info">Subir Información</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="portafolio_pdf">Portafolio PDF</string>
    <string name="status_enviados_no_enviados">Historial de enviados</string>
    <string name="linea_de_tiempo">Historial de recorrido BarrioApp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_osa">OSA</string>
    <string name="menu_precios">Precios</string>
    <string name="menu_promo">Promociones</string>
    <string name="menu_exh">Exhibiciones</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_inventario">Inventario+Sugerido</string>
    <string name="menu_canjes">Canjes</string>
    <string name="menu_mci">MCI del PDV</string>
    <string name="menu_ejecucion_materiales">Ejecución de Materiales</string>
    <string name="menu_materiales_recibidos">Materiales Recibidos</string>
    <string name="menu_pdi">PDI</string>
    <string name="menu_impulso">Impulso</string>
    <string name="menu_onPacks">OnPacks</string>
    <string name="menu_convenios">Convenios</string>
    <string name="menu_tracking">Tracking</string>
    <string name="distancia_al_pdv">Distancia al PDV:</string>
    <string name="relevo_tardio">Noticias</string>
    <string name="status_general">Status General</string>
    <string name="menu_encuesta">Encuesta App</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_muestras_medicas">EVIDENCIAS</string>
    <string name="menu_probadores">Probadores</string>
    <string name="menu_novedades">Novedades</string>
</resources>