<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header_menu_navigation"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/bg_bss"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="12">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="5"
        android:src="@drawable/logo_xplora"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"/>

    <TextView
        android:id="@+id/nav_header_codigo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:text="@string/codigo"
        android:fontFamily="@font/roboto_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/nav_header_pdv2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:text="@string/pdv_name"
        android:fontFamily="@font/roboto_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
        android:id="@+id/nav_header_distancia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="14sp"
        android:text="@string/distancia_al_pdv"
        android:fontFamily="@font/roboto_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
</LinearLayout>